fix funny spacing on event titles

--- a/src/components/sidebar.css
+++ b/src/components/sidebar.css
@@ -48,11 +48,13 @@
     display: none;
     position: absolute;
     background: var(--secondary-color);
+    border: 1px solid var(--primary-color);
     border-radius: 5%;
     min-width: 180px;
     z-index: 999;
     top: 100%;
     margin-top: -5px;
+    transition: 200ms ease;
   }
 
   .dropdown-content a {
